<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="30dp"
        android:fontFamily="@font/berkshire_swash"
        android:text="@string/user_registration"
        android:textColor="@color/teal_200"
        android:textSize="24sp"
        android:textStyle="bold" />
   <com.google.android.material.textfield.TextInputLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginHorizontal="10dp"
       style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
       android:layout_marginVertical="5dp">
       <com.google.android.material.textfield.TextInputEditText
           android:id="@+id/etName"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:hint="@string/your_name"
           android:maxLines="1"
           android:maxLength="25"
           android:inputType="text"/>
   </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email_address"
            android:maxLines="1"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginVertical="5dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/phone_no"
            android:maxLines="1"
            android:maxLength="10"
            android:inputType="phone"/>
    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:layout_gravity="center_vertical"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            />
        <Spinner
            android:id="@+id/spin_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"/>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginHorizontal="5dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="2"
            android:maxLines="3"
            android:maxLength="150"
            android:hint="@string/address"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:paddingVertical="15dp"
        android:layout_marginTop="15dp"
        />
</LinearLayout>